# uartl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  pyproject.toml
cmake/: uartlConfig.cmake
doc/: uartl.md
include/uartl/: uartl.h
python/uartl/: __init__.py  uartl.py
src/: CMakeLists.txt  uartl.c  uartl_priv.h
